// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomatedChecksView when status scan <Completed> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="Automated checks"
  />
  <div
    className="applicationView"
  >
    <FlaggedComponent
      enableJSXElement={
        <LeftNav
          deps={
            Object {
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "isResultHighlightUnavailable": [Function],
              "scanActionCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "deviceActions": undefined,
                "scanActions": undefined,
              },
              "screenshotViewModelProvider": [Function],
              "toolData": Object {
                "applicationProperties": Object {
                  "name": "some app",
                },
              },
            }
          }
          selectedKey="automated-checks"
        />
      }
      featureFlag="leftNavBar"
    />
    <div
      className="automatedChecksPanelContainer"
    >
      <FlaggedComponent
        disableJSXElement={null}
        enableJSXElement={
          <CommandBar
            cardsViewData={
              Object {
                "cards": Object {
                  "fail": Array [
                    Object {
                      "id": "test-fail-id",
                    },
                  ],
                },
              }
            }
            deps={
              Object {
                "getCardSelectionViewData": [Function],
                "getCardsViewData": [Function],
                "isResultHighlightUnavailable": [Function],
                "scanActionCreator": proxy {
                  "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                  "deviceActions": undefined,
                  "scanActions": undefined,
                },
                "screenshotViewModelProvider": [Function],
                "toolData": Object {
                  "applicationProperties": Object {
                    "name": "some app",
                  },
                },
              }
            }
            scanMetadata={
              Object {
                "deviceName": "TEST DEVICE",
                "targetAppInfo": Object {
                  "name": "test-target-app-name",
                },
                "timestamp": "test timestamp",
                "toolData": Object {
                  "applicationProperties": Object {
                    "name": "some app",
                  },
                },
              }
            }
            scanStoreData={
              Object {
                "status": 2,
              }
            }
          />
        }
        featureFlag="leftNavBar"
      />
      <div
        className="automatedChecksPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <FlaggedComponent
            disableJSXElement={
              <CommandBar
                cardsViewData={
                  Object {
                    "cards": Object {
                      "fail": Array [
                        Object {
                          "id": "test-fail-id",
                        },
                      ],
                    },
                  }
                }
                deps={
                  Object {
                    "getCardSelectionViewData": [Function],
                    "getCardsViewData": [Function],
                    "isResultHighlightUnavailable": [Function],
                    "scanActionCreator": proxy {
                      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                      "deviceActions": undefined,
                      "scanActions": undefined,
                    },
                    "screenshotViewModelProvider": [Function],
                    "toolData": Object {
                      "applicationProperties": Object {
                        "name": "some app",
                      },
                    },
                  }
                }
                scanMetadata={
                  Object {
                    "deviceName": "TEST DEVICE",
                    "targetAppInfo": Object {
                      "name": "test-target-app-name",
                    },
                    "timestamp": "test timestamp",
                    "toolData": Object {
                      "applicationProperties": Object {
                        "name": "some app",
                      },
                    },
                  }
                }
                scanStoreData={
                  Object {
                    "status": 2,
                  }
                }
              />
            }
            enableJSXElement={null}
            featureFlag="leftNavBar"
          />
          <main>
            <TestView
              cardsViewData={
                Object {
                  "cards": Object {
                    "fail": Array [
                      Object {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              deps={
                Object {
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "scanActionCreator": proxy {
                    "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                    "deviceActions": undefined,
                    "scanActions": undefined,
                  },
                  "screenshotViewModelProvider": [Function],
                  "toolData": Object {
                    "applicationProperties": Object {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={
                Object {
                  "deviceName": "TEST DEVICE",
                  "targetAppInfo": Object {
                    "name": "test-target-app-name",
                  },
                  "timestamp": "test timestamp",
                  "toolData": Object {
                    "applicationProperties": Object {
                      "name": "some app",
                    },
                  },
                }
              }
              scanStatus={2}
              userConfigurationStoreData={
                Object {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          viewModel={
            Object {
              "screenshotData": Object {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={Object {}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      Object {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`AutomatedChecksView when status scan <Failed> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="Automated checks"
  />
  <div
    className="applicationView"
  >
    <FlaggedComponent
      enableJSXElement={
        <LeftNav
          deps={
            Object {
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "isResultHighlightUnavailable": [Function],
              "scanActionCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "deviceActions": undefined,
                "scanActions": undefined,
              },
              "screenshotViewModelProvider": [Function],
              "toolData": Object {
                "applicationProperties": Object {
                  "name": "some app",
                },
              },
            }
          }
          selectedKey="automated-checks"
        />
      }
      featureFlag="leftNavBar"
    />
    <div
      className="automatedChecksPanelContainer"
    >
      <FlaggedComponent
        disableJSXElement={null}
        enableJSXElement={
          <CommandBar
            cardsViewData={
              Object {
                "cards": Object {
                  "fail": Array [
                    Object {
                      "id": "test-fail-id",
                    },
                  ],
                },
              }
            }
            deps={
              Object {
                "getCardSelectionViewData": [Function],
                "getCardsViewData": [Function],
                "isResultHighlightUnavailable": [Function],
                "scanActionCreator": proxy {
                  "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                  "deviceActions": undefined,
                  "scanActions": undefined,
                },
                "screenshotViewModelProvider": [Function],
                "toolData": Object {
                  "applicationProperties": Object {
                    "name": "some app",
                  },
                },
              }
            }
            scanMetadata={null}
            scanStoreData={
              Object {
                "status": 3,
              }
            }
          />
        }
        featureFlag="leftNavBar"
      />
      <div
        className="automatedChecksPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <FlaggedComponent
            disableJSXElement={
              <CommandBar
                cardsViewData={
                  Object {
                    "cards": Object {
                      "fail": Array [
                        Object {
                          "id": "test-fail-id",
                        },
                      ],
                    },
                  }
                }
                deps={
                  Object {
                    "getCardSelectionViewData": [Function],
                    "getCardsViewData": [Function],
                    "isResultHighlightUnavailable": [Function],
                    "scanActionCreator": proxy {
                      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                      "deviceActions": undefined,
                      "scanActions": undefined,
                    },
                    "screenshotViewModelProvider": [Function],
                    "toolData": Object {
                      "applicationProperties": Object {
                        "name": "some app",
                      },
                    },
                  }
                }
                scanMetadata={null}
                scanStoreData={
                  Object {
                    "status": 3,
                  }
                }
              />
            }
            enableJSXElement={null}
            featureFlag="leftNavBar"
          />
          <main>
            <TestView
              cardsViewData={
                Object {
                  "cards": Object {
                    "fail": Array [
                      Object {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              deps={
                Object {
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "scanActionCreator": proxy {
                    "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                    "deviceActions": undefined,
                    "scanActions": undefined,
                  },
                  "screenshotViewModelProvider": [Function],
                  "toolData": Object {
                    "applicationProperties": Object {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={null}
              scanStatus={3}
              userConfigurationStoreData={
                Object {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          viewModel={
            Object {
              "screenshotData": Object {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
        <DeviceDisconnectedPopup
          onConnectNewDevice={[Function]}
          onRescanDevice={[Function]}
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={Object {}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      Object {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`AutomatedChecksView when status scan <Scanning> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="Automated checks"
  />
  <div
    className="applicationView"
  >
    <FlaggedComponent
      enableJSXElement={
        <LeftNav
          deps={
            Object {
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "isResultHighlightUnavailable": [Function],
              "scanActionCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "deviceActions": undefined,
                "scanActions": undefined,
              },
              "screenshotViewModelProvider": [Function],
              "toolData": Object {
                "applicationProperties": Object {
                  "name": "some app",
                },
              },
            }
          }
          selectedKey="automated-checks"
        />
      }
      featureFlag="leftNavBar"
    />
    <div
      className="automatedChecksPanelContainer"
    >
      <FlaggedComponent
        disableJSXElement={null}
        enableJSXElement={
          <CommandBar
            cardsViewData={
              Object {
                "cards": Object {
                  "fail": Array [
                    Object {
                      "id": "test-fail-id",
                    },
                  ],
                },
              }
            }
            deps={
              Object {
                "getCardSelectionViewData": [Function],
                "getCardsViewData": [Function],
                "isResultHighlightUnavailable": [Function],
                "scanActionCreator": proxy {
                  "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                  "deviceActions": undefined,
                  "scanActions": undefined,
                },
                "screenshotViewModelProvider": [Function],
                "toolData": Object {
                  "applicationProperties": Object {
                    "name": "some app",
                  },
                },
              }
            }
            scanMetadata={null}
            scanStoreData={
              Object {
                "status": 1,
              }
            }
          />
        }
        featureFlag="leftNavBar"
      />
      <div
        className="automatedChecksPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <FlaggedComponent
            disableJSXElement={
              <CommandBar
                cardsViewData={
                  Object {
                    "cards": Object {
                      "fail": Array [
                        Object {
                          "id": "test-fail-id",
                        },
                      ],
                    },
                  }
                }
                deps={
                  Object {
                    "getCardSelectionViewData": [Function],
                    "getCardsViewData": [Function],
                    "isResultHighlightUnavailable": [Function],
                    "scanActionCreator": proxy {
                      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                      "deviceActions": undefined,
                      "scanActions": undefined,
                    },
                    "screenshotViewModelProvider": [Function],
                    "toolData": Object {
                      "applicationProperties": Object {
                        "name": "some app",
                      },
                    },
                  }
                }
                scanMetadata={null}
                scanStoreData={
                  Object {
                    "status": 1,
                  }
                }
              />
            }
            enableJSXElement={null}
            featureFlag="leftNavBar"
          />
          <main>
            <TestView
              cardsViewData={
                Object {
                  "cards": Object {
                    "fail": Array [
                      Object {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              deps={
                Object {
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "scanActionCreator": proxy {
                    "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                    "deviceActions": undefined,
                    "scanActions": undefined,
                  },
                  "screenshotViewModelProvider": [Function],
                  "toolData": Object {
                    "applicationProperties": Object {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={null}
              scanStatus={1}
              userConfigurationStoreData={
                Object {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          viewModel={
            Object {
              "screenshotData": Object {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={Object {}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      Object {
        "isFirstTime": false,
      }
    }
  />
</div>
`;

exports[`AutomatedChecksView when status scan <undefined> 1`] = `
<div
  className="automatedChecksView"
  data-automation-id="automated-checks-view"
>
  <TitleBar
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    pageTitle="Automated checks"
  />
  <div
    className="applicationView"
  >
    <FlaggedComponent
      enableJSXElement={
        <LeftNav
          deps={
            Object {
              "getCardSelectionViewData": [Function],
              "getCardsViewData": [Function],
              "isResultHighlightUnavailable": [Function],
              "scanActionCreator": proxy {
                "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                "deviceActions": undefined,
                "scanActions": undefined,
              },
              "screenshotViewModelProvider": [Function],
              "toolData": Object {
                "applicationProperties": Object {
                  "name": "some app",
                },
              },
            }
          }
          selectedKey="automated-checks"
        />
      }
      featureFlag="leftNavBar"
    />
    <div
      className="automatedChecksPanelContainer"
    >
      <FlaggedComponent
        disableJSXElement={null}
        enableJSXElement={
          <CommandBar
            cardsViewData={
              Object {
                "cards": Object {
                  "fail": Array [
                    Object {
                      "id": "test-fail-id",
                    },
                  ],
                },
              }
            }
            deps={
              Object {
                "getCardSelectionViewData": [Function],
                "getCardsViewData": [Function],
                "isResultHighlightUnavailable": [Function],
                "scanActionCreator": proxy {
                  "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                  "deviceActions": undefined,
                  "scanActions": undefined,
                },
                "screenshotViewModelProvider": [Function],
                "toolData": Object {
                  "applicationProperties": Object {
                    "name": "some app",
                  },
                },
              }
            }
            scanMetadata={null}
            scanStoreData={
              Object {
                "status": undefined,
              }
            }
          />
        }
        featureFlag="leftNavBar"
      />
      <div
        className="automatedChecksPanelLayout"
      >
        <div
          className="mainContentWrapper"
        >
          <FlaggedComponent
            disableJSXElement={
              <CommandBar
                cardsViewData={
                  Object {
                    "cards": Object {
                      "fail": Array [
                        Object {
                          "id": "test-fail-id",
                        },
                      ],
                    },
                  }
                }
                deps={
                  Object {
                    "getCardSelectionViewData": [Function],
                    "getCardsViewData": [Function],
                    "isResultHighlightUnavailable": [Function],
                    "scanActionCreator": proxy {
                      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                      "deviceActions": undefined,
                      "scanActions": undefined,
                    },
                    "screenshotViewModelProvider": [Function],
                    "toolData": Object {
                      "applicationProperties": Object {
                        "name": "some app",
                      },
                    },
                  }
                }
                scanMetadata={null}
                scanStoreData={
                  Object {
                    "status": undefined,
                  }
                }
              />
            }
            enableJSXElement={null}
            featureFlag="leftNavBar"
          />
          <main>
            <TestView
              cardsViewData={
                Object {
                  "cards": Object {
                    "fail": Array [
                      Object {
                        "id": "test-fail-id",
                      },
                    ],
                  },
                }
              }
              deps={
                Object {
                  "getCardSelectionViewData": [Function],
                  "getCardsViewData": [Function],
                  "isResultHighlightUnavailable": [Function],
                  "scanActionCreator": proxy {
                    "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
                    "deviceActions": undefined,
                    "scanActions": undefined,
                  },
                  "screenshotViewModelProvider": [Function],
                  "toolData": Object {
                    "applicationProperties": Object {
                      "name": "some app",
                    },
                  },
                }
              }
              scanMetadata={null}
              userConfigurationStoreData={
                Object {
                  "isFirstTime": false,
                }
              }
            />
          </main>
        </div>
        <ScreenshotView
          viewModel={
            Object {
              "screenshotData": Object {
                "base64PngData": "this should appear in snapshotted ScreenshotView props",
              },
            }
          }
        />
      </div>
    </div>
  </div>
  <SettingsPanel
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getCardsViewData": [Function],
        "isResultHighlightUnavailable": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "deviceActions": undefined,
          "scanActions": undefined,
        },
        "screenshotViewModelProvider": [Function],
        "toolData": Object {
          "applicationProperties": Object {
            "name": "some app",
          },
        },
      }
    }
    featureFlagData={Object {}}
    layerClassName="settingsPanelLayerHost"
    userConfigStoreState={
      Object {
        "isFirstTime": false,
      }
    }
  />
</div>
`;
